--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_host_fragment_content_main"
-        android:name="com.example.themovie.FirstFragment"
+        android:name="com.example.themovie.TopRatedFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
