--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/profileImg"
-                android:layout_width="130dp"
-                android:layout_height="180dp"
+                android:layout_width="150dp"
+                android:layout_height="225dp"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toTopOf="@id/name"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,9 @@
                 android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:gravity="center"
+                android:lines="2"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@id/profileImg"
@@ -47,7 +49,9 @@
                 android:id="@+id/character"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:gravity="center"
+                android:lines="2"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@id/profileImg"
                 app:layout_constraintStart_toStartOf="@id/postLayout"
