--- a/app/src/main/res/layout/details_recommendations.xml
+++ b/app/src/main/res/layout/details_recommendations.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_detail_recommendations_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <!--
     <TextView
         android:id="@+id/cast_caption"
         android:layout_width="wrap_content"
@@ -27,5 +33,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cast_caption"
         tools:listitem="@layout/item_recommendations" />
+        -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
