--- a/app/src/main/res/layout/details_cast.xml
+++ b/app/src/main/res/layout/details_cast.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_detail_cast_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <!--
     <TextView
         android:id="@+id/cast_caption"
         android:layout_width="wrap_content"
@@ -27,5 +33,5 @@
         app:layout_constraintTop_toBottomOf="@id/cast_caption"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
+-->
 </androidx.constraintlayout.widget.ConstraintLayout>
